créditos do objeto 3d

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-
-<!-- Créditos pin: Ngo.Phuoc.Truong(https://sketchfab.com/Ngo.Phuoc.Truong) https://sketchfab.com/3d-models/map-pin-2d59d85ab74d4c668beb7fd506056e31 -->
-
+<!-- 
+Por Antônio Felipe Almeida Costa 
+Página criada como entrega para o curso XR
+Disponível em: https://github.com/falmeidaco/onibusfortaleza-ra
+Créditos pin (objeto 3D): Ngo.Phuoc.Truong(https://sketchfab.com/Ngo.Phuoc.Truong) https://sketchfab.com/3d-models/map-pin-2d59d85ab74d4c668beb7fd506056e31 
+-->
 <html>
-
 <head>
+  <title>ônibus Fortaleza RA</title>
   <script type='module' src='src/main.js'></script>
   <link rel='stylesheet' type='text/css' href='src/style.css' />
 </head>
